fixed the z-index

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ carousel slider
     flex-direction: column;
     align-items: center;
     width: 50%; /*width of the navbar 100% for full screen*/
+    z-index:1000;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
